--- a/styles/style.css
+++ b/styles/style.css
@@ -68,14 +68,14 @@
 }
 .Development-model-containar{
     width: 1440px;
-    height: 1500px;
+    height: 1280px;
     border: 2px solid red;
 }
 
 
 .full-model-cantainar{
     width: 1140px;
-    height: 1395px;
+    height: 1240px;
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.02);
     margin: 0 auto;
@@ -84,24 +84,136 @@
 }
 .full-model-cantainar-main{
     width: 946px;
-height: 1235px;
+height: 1100px;
 border:  2px solid red;
 margin: 0% auto;
 margin-top: 65px;
 }
-.model-title-cantainar{
+/* .model-title-cantainar{
     text-align: center;
-}
+} */
 .model-title-cantainar h1{
     font-size: 32px;
     text-align: center;
-}
+}  
 .model-title-cantainar p{
-    width: 852px;
+ text-align: center;
+ width: 780px;
 height: 52px;
-    font-size: 16px;
+margin: 0% auto;
+}
+.frist-model-cantainer{
+    width: 946px;
+    height: 300px;
+    /* border: 2px solid rebeccapurple; */
     display: flex;
-flex-direction: column;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 16px;
+    margin-top: 10px;
+
+background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+}
+.frist-model{
+    width: 850px;
+height: 240px;
+/* border:  2px solid red; */
+margin: 32px 0;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+align-items:center;
+}
+.frist-model-text-cantainer{
+    width: 477px;
+    height: 220px;
+   display: flex;
+   flex-direction: column;
+   justify-content:flex-start ;
+   align-items: flex-start;
+}
+.frist-model-text-cantainer h1{
+font-size: 28px;
+
+}
+.frist-model-text-cantainer p{
+  font-size: 18px;
+}
+.frist-model-text-cantainer button{
+    width: 150px;
+height: 50px;
+}
+
+.second-model-cantainer{
+    width: 946px;
+    height: 300px;
+    /* border: 2px solid rebeccapurple; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 16px;
+    margin-top: 10px;
+
+background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+
+}
+.second-model{
+    width: 850px;
+height: 240px;
+/* border:  2px solid red; */
+margin: 32px 0;
+display: flex;
+flex-direction: row;
 justify-content: flex-start;
+align-items: flex-start;
+
+
+}
+.second-model-text-cantainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 477px;
+    
+height: 220px;
+
+}
+.second-model-text-cantainer h1{
+    font-size: 28px;
+}
+.second-model-text-cantainer p{
+    font-size: 18px;
+}
+.second-model-text-cantainer button{
+    width: 150px;
+height: 50px;
+}
+
+.Inspiration-cantainer{
+    width: 1440px;
+height: 777px;
+border: 2px solid rebeccapurple;
+}
+.Inspiration-main-cantainer{
+    width: 1140px;
+    height: 777px;
+    border: 2px solid blue;
+    margin: 0 auto;
+    
+    box-sizing: border-box;
+border: 1px solid rgba(13, 19, 33, 0.2);
+border-radius: 16px;
+
+}
+.Inspiration-text-cantainer{
+    width: 852px;
+height: 115px;
+display: flex;
+flex-direction: column;
+justify-content: center;
 align-items: center;
 }
+
