--- a/styles/style.css
+++ b/styles/style.css
@@ -196,13 +196,13 @@ height: 50px;
     width: 1440px;
 height: 777px;
 border: 2px solid rebeccapurple;
+margin-top: 40px;
 }
 .Inspiration-main-cantainer{
     width: 1140px;
     height: 777px;
     border: 2px solid blue;
     margin: 0 auto;
-    
     box-sizing: border-box;
 border: 1px solid rgba(13, 19, 33, 0.2);
 border-radius: 16px;
@@ -210,10 +210,142 @@ border-radius: 16px;
 }
 .Inspiration-text-cantainer{
     width: 852px;
-height: 115px;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+height: 125px;
+border: 2px solid rebeccapurple;
+text-align: center;
+margin: 0% auto;
+
+}
+.Inspiration-text-cantainer h1{
+    font-size: 32px;
+    text-align: center;
+   
+}
+.Inspiration-text-cantainer p{
+font-size: 16px;
+}
+.youtubevedio-add-cantainer{
+    width: 1140px;
+height: 590px;
+margin-top: 20px;
+border: 2px solid red;
+box-sizing: border-box;
+border: 1px solid rgba(13, 19, 33, 0.2);
+border-radius: 16px;
+
+}
+.youtube-cantainer{
+
+    width: 1076px;
+    height: 550px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 15px;
+}
+.youtube-cantainer iframe{
+    border-radius: 16px;
 }
 
+.tree-cantainer-one-line{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+    margin-top: 20px;
+}
+.target-cantainer{
+  width: 1440px;
+  height: 540px;
+  border: 2px solid palevioletred;
+  margin-top: 70px;
+}
+.target-main-cantainer{
+    width: 1140px;
+height: 480px;
+border: 2px solid black;
+margin: 0 auto;
+margin-top: 20px;
+}
+.target-tittle-cantainer h1{
+    font-size: 32px;
+    text-align: center;
+}
+.target-tittle-cantainer p{
+    font-size: 18px;
+    text-align: center;
+    width: 780px;
+height: 52px;
+margin: 0% auto;
+}
+.target-html{
+    width: 280px;
+    border: 2px solid red;
+height: 235px;
+border-radius: 16px;
+background: rgba(255, 76, 30, 0.05);
+padding: 40px;
+
+}
+.target-html-main{
+    border: 2px solid rebeccapurple;
+    display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+}
+.target-html-main p{
+
+    font-size: 16px;
+}
+.target-html-main h5{
+    text-decoration-line: underline;
+}
+.target-css{
+    width: 280px;
+    border: 2px solid red;
+height: 235px;
+border-radius: 16px;
+background: rgba(0, 76, 232, 0.05);
+padding: 40px;
+}
+.target-css-main{
+    border: 2px solid rebeccapurple;
+    display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+}
+.target-css-main p{
+
+    font-size: 16px;
+}
+.target-css-main h5{
+    text-decoration-line: underline;
+}
+.target-js{
+    width: 280px;
+    border: 2px solid red;
+height: 235px;
+border-radius: 16px;
+background: rgba(255, 223, 0, 0.05);
+padding: 40px;
+}
+.target-js-main{
+    border: 2px solid rebeccapurple;
+    display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+}
+.target-js-main p{
+
+    font-size: 16px;
+}
+.target-js-main h5{
+    text-decoration-line: underline;
+}
+.support-cantainer{
+    width: 1440px;
+    height: 380px;
+}
