--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@
 .Development-model-containar{
     width: 1440px;
     height: 1280px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 
@@ -79,13 +79,13 @@
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.02);
     margin: 0 auto;
-    border: 2px solid rebeccapurple;
+    /* border: 2px solid rebeccapurple; */
     margin-top: 40px;
 }
 .full-model-cantainar-main{
     width: 946px;
 height: 1100px;
-border:  2px solid red;
+/* border:  2px solid red; */
 margin: 0% auto;
 margin-top: 65px;
 }
@@ -195,23 +195,23 @@ height: 50px;
 .Inspiration-cantainer{
     width: 1440px;
 height: 777px;
-border: 2px solid rebeccapurple;
+/* border: 2px solid rebeccapurple; */
 margin-top: 40px;
 }
 .Inspiration-main-cantainer{
     width: 1140px;
     height: 777px;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     margin: 0 auto;
     box-sizing: border-box;
-border: 1px solid rgba(13, 19, 33, 0.2);
+border:  rgba(13, 19, 33, 0.2);
 border-radius: 16px;
 
 }
 .Inspiration-text-cantainer{
     width: 852px;
 height: 125px;
-border: 2px solid rebeccapurple;
+/* border: 2px solid rebeccapurple; */
 text-align: center;
 margin: 0% auto;
 
@@ -228,7 +228,7 @@ font-size: 16px;
     width: 1140px;
 height: 590px;
 margin-top: 20px;
-border: 2px solid red;
+/* border: 2px solid red; */
 box-sizing: border-box;
 border: 1px solid rgba(13, 19, 33, 0.2);
 border-radius: 16px;
@@ -257,13 +257,13 @@ border-radius: 16px;
 .target-cantainer{
   width: 1440px;
   height: 540px;
-  border: 2px solid palevioletred;
+  /* border: 2px solid palevioletred; */
   margin-top: 70px;
 }
 .target-main-cantainer{
     width: 1140px;
 height: 480px;
-border: 2px solid black;
+/* border: 2px solid black; */
 margin: 0 auto;
 margin-top: 20px;
 }
@@ -280,7 +280,7 @@ margin: 0% auto;
 }
 .target-html{
     width: 280px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 height: 235px;
 border-radius: 16px;
 background: rgba(255, 76, 30, 0.05);
@@ -288,7 +288,7 @@ padding: 40px;
 
 }
 .target-html-main{
-    border: 2px solid rebeccapurple;
+    /* border: 2px solid rebeccapurple; */
     display: flex;
 flex-direction: column;
 justify-content: flex-start;
@@ -300,17 +300,18 @@ align-items: flex-start;
 }
 .target-html-main h5{
     text-decoration-line: underline;
+    
 }
 .target-css{
     width: 280px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 height: 235px;
 border-radius: 16px;
 background: rgba(0, 76, 232, 0.05);
 padding: 40px;
 }
 .target-css-main{
-    border: 2px solid rebeccapurple;
+    /* border: 2px solid rebeccapurple; */
     display: flex;
 flex-direction: column;
 justify-content: flex-start;
@@ -325,14 +326,14 @@ align-items: flex-start;
 }
 .target-js{
     width: 280px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 height: 235px;
 border-radius: 16px;
 background: rgba(255, 223, 0, 0.05);
 padding: 40px;
 }
 .target-js-main{
-    border: 2px solid rebeccapurple;
+    /* border: 2px solid rebeccapurple; */
     display: flex;
 flex-direction: column;
 justify-content: flex-start;
@@ -348,13 +349,13 @@ align-items: flex-start;
 .support-cantainer{
     width: 1440px;
     height: 380px;
-    border: 2px solid yellow ;
+    /* border: 2px solid yellow ; */
     margin-top: 50px;
 }
 .support-main-cantainer{
     width: 1140px;
     height: 290px;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
     margin: 0% auto;
     background-image: url(/assets/handshake.jpg);
     background-position: center;
@@ -369,8 +370,11 @@ background: rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),url(Email);
 .support-sub-cantainer{
     width: 1044px;
 height: 186px;
-border: 2px solid yellow;
-    margin: 0% auto;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
     margin-top: 60px;
 }
 .support-text-cantainer h1{
@@ -406,4 +410,29 @@ height: 58px;
 border-radius: 8px;
 
 background: rgb(255, 255, 255);
+}
+.footer-cantainer{
+    width: 1440px;
+height: 100px;
+border-radius: 16px;
+   
+background: rgba(13, 19, 33, 0.03);
+border: 2px solid whitesmoke;
+}
+.footer-main-cantainer{
+ width: 1140px;
+height: 36px;
+display: flex;
+margin: 0% auto;
+margin-top: 40px;
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+/* border: 2px solid rebeccapurple; */
+
+}
+.footer-link-container{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
 }
