--- a/styles/style.css
+++ b/styles/style.css
@@ -153,6 +153,7 @@ height: 50px;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    gap:70px ;
     border-radius: 16px;
     margin-top: 10px;
 
@@ -177,9 +178,8 @@ align-items: flex-start;
     justify-content: flex-start;
     align-items: flex-start;
     width: 477px;
+    height: 220px;
     
-height: 220px;
-
 }
 .second-model-text-cantainer h1{
     font-size: 28px;
@@ -189,7 +189,7 @@ height: 220px;
 }
 .second-model-text-cantainer button{
     width: 150px;
-height: 50px;
+    height: 50px;
 }
 
 .Inspiration-cantainer{
