--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@
     width: 1440px;
     height: 652px;
     /* border:  2px solid red; */
-    background-image: url(./assets/Hero-bg.png);
+    background-image: url(../assets/Hero-bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
