--- a/styles/style.css
+++ b/styles/style.css
@@ -357,7 +357,7 @@ align-items: flex-start;
     height: 290px;
     /* border: 2px solid yellow; */
     margin: 0% auto;
-    background-image: url(../assets./handshake.jpg);
+    background-image: url(../assets/handshake.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
